fix template folder structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@
 
   <script>
     // Use your deployed Render URL here
-    const API_URL = "https://college-chatbot-4.onrender.com/get";
+    const API_URL = "https://https://chatbot-000.onrender.com//get";
 
     const chatBox = document.getElementById("chat-box");
 
