--- a/templates/index.html
+++ b/templates/index.html
@@ -144,9 +144,13 @@
   <script>
     const chatBox = document.getElementById("chat-box");
 
-    const API_URL = (window.location.hostname === "127.0.0.1" || window.location.hostname === "localhost")
-  ? "http://localhost:5000/get"
-  : "https://chatbot000439.onrender.com/get";
+   let API_URL;
+
+if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
+  API_URL = "http://127.0.0.1:5000/get";
+} else {
+  API_URL = "/get";  // works automatically on Render
+}
 
     function appendMessage(text, type) {
       console.log(`Appending message: ${text} (${type})`);
